[package]
name = "psitool"
version = "0.6.0"
edition = "2024"
authors = ["psitool <psitool@protonmail.com>"]
description = "The 100% free and open-source Remote Viewing toolset."
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["remoteview", "remoteviewing", "psi", "rv", "parapsychology"]
exclude = ["target/*", ".github/*"]
include = ["src/**", "Cargo.toml", "README.md", "example_config.yaml"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
data-encoding = "2.9.0"
env_logger = "0.11.8"
log = "0.4.28"
once_cell = "1.21.3"
open = "5.3.2"
rand = "0.9.2"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = "1.0.227"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = ["v5"] }

[[bin]]
name = "psi-target-pool"
path = "src/bin/psi_target_pool.rs"

[[bin]]
name = "psi-wm-downloader"
path = "src/bin/psi_wm_downloader.rs"

[[bin]]
name = "psi-rvuid-gen"
path = "src/bin/psi_rvuid_gen.rs"

[[bin]]
name = "psi-rvuid-find"
path = "src/bin/psi_rvuid_find.rs"
